--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <label for="toCelsius">Fahrenheit -> Celsius</label>
     <br>
 
-    <button id="submitButton" onclick="convert()">Submit</button>
+    <button id="submitButton" type="button" onclick="convert()">Submit</button>
     <br>
 
     <h2 id="result"></h2>
