--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <form>
+  <div>
      <h1>Temperature Conversion</h1>
 
     <input type="number" id="temperatureTextBox" value="0">
@@ -28,7 +28,7 @@
     <br>
 
     <h2 id="result"></h2>
-  </form>
+  </div>
   
   
   <script src="index.js"></script>
